--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
