--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ test {
     useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+compileJava {
+    options.encoding = 'UTF-8'
 }
+
 
 compileKotlin {
     kotlinOptions {
